little fix of aboutme-description
ducking different scrollbar width in firefox

--- a/sass_folder/main.scss
+++ b/sass_folder/main.scss
@@ -234,8 +234,8 @@ section header :is(h1, h2) {
         background-color: $primary_color;
         width: 94.8vw;
         transform: translateX(-$side_paddings);
-        -webkit-transform: translateX(-$side_paddings - .42vw);
-        -moz-transform: translateX(-$side_paddings);
+        // -webkit-transform: translateX(-$side_paddings - .42vw);
+        // -moz-transform: translateX(-$side_paddings);
         box-sizing: border-box;
         margin-top: 19.07vw;
         border-radius: 0 0 20.84vw 0;
